--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "BrainHR IT Solutions",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://email2mohant.github.io/brain",
+  "homepage": "https://www.brainwaveitsolutions.info",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
